# astro-stacker

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  astro-stacker.cabal  build.sh  flake.nix  hie.yaml  output.txt
app/: Main.hs
gui/: Main.hs
nix/: overlays.nix  pkgs.nix
src-lib/: Align.hs  AstroStacker.hs  Config.hs  DSSParser.hs  ImageUtils.hs  Locating.hs  Matching.hs  MyLib.hs  Stacking.hs  StarMatching.hs  Types.hs
test/: Main.hs
test/.golden/computeLargeTriangleTransformation/: golden  stars1.txt  stars2.txt
test/.golden/locateStarsDSS/: golden
